# rag_bank_loan_project

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  test_applications.csv
bank_data/: bank_customers.csv  loan_applications.csv
chroma_db/: chroma.sqlite3
docs/: SRS_Document.md  Software_Architecture_Document.md  Use_Case_Specification.md  User_Interface_Prototype.md  uml_diagrams.puml  use_case_diagram.puml
src/bankingragdemo/: api.py  app.py  bank_main.py  example2.py  llmapi.py  rag_engine.py  rules_engine.py
