[project]
name = "bankingragdemo"
version = "0.1.0"
description = ""
authors = [
    {name = "Dimitris Iracleous",email = "diracleous@athtech.gr"}
]
readme = "README.md"
requires-python = ">=3.12, <4.0.0"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "langchain (>=0.3.27,<0.4.0)",
    "langchain-huggingface (>=0.3.1,<0.4.0)",
    "langchain-community (>=0.3.31,<0.4.0)",
    "pypdf2 (>=3.0.1,<4.0.0)",
    "langchain-openai (>=0.3.35,<0.4.0)",
    "openai (>=2.3.0,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "sentence-transformers (>=5.1.1,<6.0.0)",
    "langchain-chroma (>=0.2.6,<0.3.0)"
]

[tool.poetry]
packages = [{include = "bankingragdemo", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
